Se agregan pantallas en baja y se actualiza gitignore

--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_enviar_sms.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_enviar_sms.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lyt_enviar_sms"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EnviarSmsActivity">
+    tools:context=".ui.EnviarSmsActivity">
 
     <TextView
         android:id="@+id/textView6"
@@ -51,4 +52,14 @@
         app:layout_constraintHorizontal_bias="0.356"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNroCelular" />
+
+    <ProgressBar
+        android:id="@+id/pgbEnviarSms"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
