--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_registro.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_registro.xml
@@ -97,25 +97,36 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="218dp"
-        android:layout_height="30dp"
+        android:layout_width="219dp"
+        android:layout_height="37dp"
         android:layout_marginTop="16dp"
         android:text="Comisión: 3900"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtContraseniaNueva" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="98dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="136dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
         android:text="Grupo: 10"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
+        app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <ProgressBar
+        android:id="@+id/pgbRegistro"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
