--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_validar_sms.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_validar_sms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ValidarSmsActivity">
+    tools:context=".ui.ValidarSmsActivity">
 
     <EditText
         android:id="@+id/txtCodigo"
