--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="24dp"
         android:text="Editar"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/btnEliminarMedicamento"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -111,7 +111,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lblBebidaFrecuencia" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnEliminarMedicamento"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnEliminarMedicamento"
+        android:id="@+id/btnEliminarBebida"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="88dp"
         android:layout_height="48dp"
@@ -132,7 +132,7 @@
         android:text="Eliminar"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/btnEliminarMedicamento"
         app:layout_constraintVertical_bias="0.03" />
 
     <Button
@@ -145,7 +145,7 @@
         android:layout_marginBottom="240dp"
         android:text="Editar"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/btnEliminarMedicamento"
+        app:layout_constraintEnd_toStartOf="@+id/btnEliminarBebida"
         app:layout_constraintTop_toBottomOf="@+id/btnEditarMedicamento"
         app:layout_constraintVertical_bias="0.09" />
 
