--- a/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
+++ b/CODIGO/AsistenteVentilacion/app/src/main/res/layout/activity_main.xml
@@ -6,137 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="MEDICAMENTO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/lblMedicamentoFrecuencia"
-        android:layout_width="180dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="4dp"
-        android:text="Frecuencia: -"
-        app:layout_constraintEnd_toStartOf="@+id/btnEditarMedicamento"
-        app:layout_constraintHorizontal_bias="0.019"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblMedicamentoNombre" />
-
-    <TextView
-        android:id="@+id/lblBebidaFrecuencia"
-        android:layout_width="177dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="4dp"
-        android:text="Frecuencia: -"
-        app:layout_constraintEnd_toStartOf="@+id/btnEditarBebida"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBebidaNombre" />
-
-    <TextView
-        android:id="@+id/lblMedicamentoNombre"
-        android:layout_width="181dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        android:text="Nombre: -"
-        app:layout_constraintEnd_toStartOf="@+id/btnEditarMedicamento"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/lblBebidaNombre"
-        android:layout_width="177dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="72dp"
-        android:text="Nombre: -"
-        app:layout_constraintEnd_toStartOf="@+id/btnEditarBebida"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblMedicamentoFrecuencia" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="BEBIDA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblMedicamentoFrecuencia" />
-
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="Historial"
-        app:layout_constraintEnd_toStartOf="@+id/btnLimpiarHistorial"
-        app:layout_constraintHorizontal_bias="0.187"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBebidaFrecuencia" />
-
-    <ImageButton
-        android:id="@+id/btnEditarMedicamento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/btnEliminarMedicamento"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:srcCompat="@drawable/ic_action_editar" />
-
-    <ImageButton
-        android:id="@+id/btnEditarBebida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/btnEliminarBebida"
-        app:layout_constraintTop_toBottomOf="@+id/btnEditarMedicamento"
-        app:srcCompat="@drawable/ic_action_editar" />
-
-    <ImageButton
-        android:id="@+id/btnEliminarMedicamento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:srcCompat="@drawable/ic_action_eliminar" />
-
-    <ImageButton
-        android:id="@+id/btnEliminarBebida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEliminarMedicamento"
-        app:srcCompat="@drawable/ic_action_eliminar" />
-
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="369dp"
-        android:layout_height="344dp"
+        android:layout_height="347dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -150,17 +28,138 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/btnLimpiarHistorial"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="145dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:text="Limpiar Historial"
-        android:textColor="#E53935"
-        android:textSize="12sp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="362dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEditarBebida" />
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="274dp"
+            android:layout_height="wrap_content"
+            android:text="HISTORIAL"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnLimpiarHistorial"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Limpiar"
+            android:textColor="#E53935"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="373dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="272dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="175dp"
+                android:layout_height="wrap_content"
+                android:text="BEBIDA"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lblBebidaNombre"
+                android:layout_width="177dp"
+                android:layout_height="19dp"
+                android:layout_marginLeft="20sp"
+                android:text="Nombre: -" />
+
+            <TextView
+                android:id="@+id/lblBebidaFrecuencia"
+                android:layout_width="177dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="20sp"
+                android:text="Frecuencia: -" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btnEditarBebida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            app:srcCompat="@drawable/ic_action_editar" />
+
+        <ImageButton
+            android:id="@+id/btnEliminarBebida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12sp"
+            android:layout_marginTop="18sp"
+            app:srcCompat="@drawable/ic_action_eliminar" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="369dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="28dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="271dp"
+            android:layout_height="62dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MEDICAMENTO"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lblMedicamentoNombre"
+                android:layout_width="181dp"
+                android:layout_height="18dp"
+                android:layout_marginLeft="20sp"
+                android:text="Nombre: -" />
+
+            <TextView
+                android:id="@+id/lblMedicamentoFrecuencia"
+                android:layout_width="180dp"
+                android:layout_height="18dp"
+                android:layout_marginLeft="20sp"
+                android:text="Frecuencia: -" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btnEditarMedicamento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18sp"
+            app:srcCompat="@drawable/ic_action_editar" />
+
+        <ImageButton
+            android:id="@+id/btnEliminarMedicamento"
+            android:layout_width="37dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12sp"
+            android:layout_marginTop="18sp"
+            app:srcCompat="@drawable/ic_action_eliminar" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
